--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@ body{
     background-color:black;
 }
 
+
 .container{
     /* width:500px; */
     /* height:300px; */
@@ -15,6 +16,8 @@ body{
     margin: 0 auto;
     display: flex;
     flex-wrap: wrap;
+    /* height: 100vh; */
+    /* overflow: hidden; */
     /* box-shadow: 5px 5px 0px 0px #289FED, 10px 10px 0px 0px #5FB8FF, 15px 15px 0px 0px #A1D8FF, 20px 20px 0px 0px #CAE6FF, 25px 25px 0px 0px #E1EEFF, 5px 5px 15px 5px rgba(0,0,0,0); */
 
     box-shadow: #FFF 0 -1px 4px, #ff0 0 -2px 10px, #ff8000 0 -10px 20px, red 0 -18px 40px, 5px 5px 15px 5px rgba(0,0,0,0);
@@ -53,5 +56,55 @@ body{
     background: #bababa;
     text-shadow: #e0e0e0 1px 1px 0;
     cursor:pointer;
-   
+    font-weight: bolder;
+}
+
+.final-box{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    display: none;
+}
+
+.lose{
+    background-color: rgba(235, 18, 18, 0.705);
+}
+
+.win{
+    background-color: rgba(10, 179, 10, 0.733)
+}
+
+.block{
+    display: block;
+}
+
+.center{
+    display: flex;
+    height: 100%;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+}
+
+#mess-gameOver{
+    font-size: 100px;
+    font-weight: 500;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+#result{
+    padding: 10px;
+    margin: 15px;
+    border-radius: 40px;
+    background-color:#fff;
+    text-align: center;
+    font-weight:bolder; 
+}
+
+#again.button{
+    display: block;
+    margin: 0 auto;
+
 }
